ghc-4335c07/testsuite/tests/typecheck/should_compile/tc020.hs
module ShouldSucceed where

f x = a where a = x:a
