ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail205.hs
module Fail where

f x = foldl (+) [1 .. x] 'a'
